// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToggleMessageReadButton Snapshots should match snapshot for form structure: form-structure 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="inline-block"
>
  <button
    class="btn btn-primary mt-4 mr-2"
    type="submit"
  >
    Mark as Unread
  </button>
</form>
`;

exports[`ToggleMessageReadButton Snapshots should match snapshot for read message state (Mark as Unread): read-mark-as-unread 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="inline-block"
>
  <button
    class="btn btn-primary mt-4 mr-2"
    type="submit"
  >
    Mark as Unread
  </button>
</form>
`;

exports[`ToggleMessageReadButton Snapshots should match snapshot for unread message state (Mark as Read): unread-mark-as-read 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="inline-block"
>
  <button
    class="btn btn-primary mt-4 mr-2"
    type="submit"
  >
    Mark as Read
  </button>
</form>
`;

exports[`ToggleMessageReadButton Snapshots should match snapshot with different message ID: different-message-id 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="inline-block"
>
  <button
    class="btn btn-primary mt-4 mr-2"
    type="submit"
  >
    Mark as Read
  </button>
</form>
`;
